--- a/configs/suncet/i2map_train.yaml
+++ b/configs/suncet/i2map_train.yaml
@@ -1,36 +1,32 @@
 criterion:
   classes_per_batch: 17
-  me_max: False
-  sharpen: 0.25
+  supervised_epochs: 100
   supervised_imgs_per_class: 6
   supervised_views: 1
   temperature: 0.1
   unsupervised_batch_size: 64
 data:
   color_jitter_strength: 1.0
-  data_seed: null
   dataset: ROV
   image_folder: imagenet_full_size/061417/
-  label_smoothing: 0.1
-  multicrop: 6
-  normalize: false
-  #root_path: /root/all_ROV_crops_with_unknown/all_ROV_crops_with_unknown/
+  label_smoothing: 0.0
+  normalize: true
   root_path: /root/datasets/all_crops/
   subset_path: ROV_subsets
-  unique_classes_per_rank: true
+  unique_classes_per_rank: false
   unlabeled_frac: 0.9
 logging:
   folder: /root/suncet/path_to_save_models_and_logs_i2map/
-  write_tag: paws
+  write_tag: suncet-tmp
 meta:
-  copy_data: false
+  copy_data: true
   device: cuda:0
   load_checkpoint: false
   model_name: resnet50
   output_dim: 2048
   read_checkpoint: null
   use_fp16: true
-  use_pred_head: true
+  use_pred_head: false
 optimization:
   epochs: 200
   final_lr: 0.0012
